      - $auth_conf_file
      - $custom_autofs_conf_options
    - Added $master_conf_dir and $master_include_dirs parameters to allow
      users to specify directories containing auto.master entry files.
    - Added $maps_dir to specify the location of SIMP-managed maps and
      changed the directory name from /etc/autofs to /etc/autofs.maps.simp.d
      for clarity.
    - Renamed $options to $automount_options for clarity.
    - Renamed $use_misc_device to $automount_use_misc_device for clarity.
  - autofs::ldap_auth class changes
    - autofs::ldap_auth is now a private class to ensure the name of the
      configuration file created by this class matches the 'auth_conf_file'
      setting in /etc/autofs.conf.
    - Added $encoded_secret optional parameter.  This parameter takes
      precedence when both $secret and $encoded_secret parameters are
      specified
  - autofs::map::master has been deprecated by autofs::map or
    autofs::masterfile.  Its behavior has changed from writing a section
    of /etc/auto.master to writing a autofs master entry file in
    $autofs::master_conf_dir.
  - autofs::map::entry has been deprecated by autofs::map or autofs::mapfile.
    Its behavior has changed from writing a file in /etc/autofs to writing
    a file in $autofs::maps_dir.

* Fri Aug 02 2019 Robert Vincent <pillarsdotnet@gmail.com> - 7.0.0-0
- Support puppetlabs/concat 6.x.

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 6.2.0-0
- Add v2 compliance_markup data
- Drop Puppet 4 support
- Add Puppet 6 support
- Add puppetlabs-stdlib 6 support

* Thu Feb 14 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.3-0
- Expanded the upper limit of the concat and stdlib Puppet module versions
- Fixed a URL in the README.md

* Thu Nov 01 2018 Jeanne Greulich <jeanner.greulich@onyxpoint.com> - 6.1.2-0
- Static asset updates for puppet 5
- Update badges in README.md

* Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 6.1.2-0